feature: add db support, add Users RestAPI, remove web app
