# api-docs/api-docs.yaml
@@ -13,7 +13,119 @@ servers:
 - url: http://localhost:8080
   description: Generated server url
 paths:
-  /books/{id}/comments:
+  /api/v1/users/{username}:
+    get:
+      tags:
+      - user-controller
+      summary: Get a user by its id
+      operationId: getUserById
+      parameters:
+      - name: username
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "400":
+          description: Invalid id supplied
+        "200":
+          description: Found the user
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        "404":
+          description: user not found
+    put:
+      tags:
+      - user-controller
+      summary: Updates a user
+      operationId: updateUser
+      parameters:
+      - name: username
+        in: path
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDTO'
+        required: true
+      responses:
+        "200":
+          description: If the user has been created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        "500":
+          description: If a runtime error occurs while processing the request
+        "400":
+          description: If one or more request parameters don't comply with the specification
+    delete:
+      tags:
+      - user-controller
+      summary: Delete a user by its id
+      operationId: deleteUser
+      parameters:
+      - name: username
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "204":
+          description: If the user has been deleted successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        "400":
+          description: Invalid id supplied
+        "404":
+          description: user not found
+  /api/v1/users/:
+    get:
+      tags:
+      - user-controller
+      summary: Get a list of users
+      operationId: getUsers
+      responses:
+        "200":
+          description: Returns the list of users
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserDTO'
+        "500":
+          description: If a runtime error occurs while processing the request
+    post:
+      tags:
+      - user-controller
+      summary: Creates a new user
+      operationId: createUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDTO'
+        required: true
+      responses:
+        "200":
+          description: If the user has been created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        "500":
+          description: If a runtime error occurs while processing the request
+        "400":
+          description: If one or more request parameters don't comply with the specification
+  /api/v1/books/{id}/comments:
     post:
       tags:
       - book-controller
@@ -33,25 +145,23 @@ paths:
               $ref: '#/components/schemas/Comment'
         required: true
       responses:
-        "400":
-          description: If one or more request parameters don't comply with the specification
-        "500":
-          description: If a runtime error occurs while processing the request
         "200":
           description: If the comment has been created successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Comment'
-  /books/:
+        "500":
+          description: If a runtime error occurs while processing the request
+        "400":
+          description: If one or more request parameters don't comply with the specification
+  /api/v1/books/:
     get:
       tags:
       - book-controller
       summary: Get a list of books
       operationId: getBooks
       responses:
-        "500":
-          description: If a runtime error occurs while processing the request
         "200":
           description: Returns the list of books
           content:
@@ -59,7 +169,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Book_Basic'
+                  $ref: '#/components/schemas/BookListResponseDTO'
+        "500":
+          description: If a runtime error occurs while processing the request
     post:
       tags:
       - book-controller
@@ -69,20 +181,46 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Book'
+              $ref: '#/components/schemas/BookPostDTO'
         required: true
       responses:
-        "400":
-          description: If one or more request parameters don't comply with the specification
-        "500":
-          description: If a runtime error occurs while processing the request
         "200":
           description: If the book has been created successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Book'
-  /books/{id}:
+        "500":
+          description: If a runtime error occurs while processing the request
+        "400":
+          description: If one or more request parameters don't comply with the specification
+  /api/v1/users/{userId}/comments:
+    get:
+      tags:
+      - user-controller
+      summary: Get all the comments from a user
+      operationId: getCommentsByUserId
+      parameters:
+      - name: userId
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "400":
+          description: Invalid id supplied
+        "200":
+          description: Found the comments
+          content:
+            '*/*':
+              schema:
+                uniqueItems: true
+                type: array
+                items:
+                  $ref: '#/components/schemas/CommentDTO'
+        "404":
+          description: Comment not found
+  /api/v1/books/{id}:
     get:
       tags:
       - book-controller
@@ -96,16 +234,16 @@ paths:
           type: integer
           format: int64
       responses:
+        "404":
+          description: Book not found
+        "400":
+          description: Invalid id supplied
         "200":
           description: Found the book
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/Book_BookDetail'
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: Book not found
+                $ref: '#/components/schemas/Book'
     delete:
       tags:
       - book-controller
@@ -119,17 +257,17 @@ paths:
           type: integer
           format: int64
       responses:
+        "404":
+          description: Book not found
+        "400":
+          description: Invalid id supplied
         "204":
           description: If the book has been deleted successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Book'
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: Book not found
-  /books/{bookId}/comments/{id}:
+  /api/v1/books/{bookId}/comments/{id}:
     get:
       tags:
       - book-controller
@@ -149,16 +287,16 @@ paths:
           type: integer
           format: int64
       responses:
-        "404":
-          description: Comment not found
+        "400":
+          description: Invalid id supplied
         "200":
           description: Found the comment
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Comment'
-        "400":
-          description: Invalid id supplied
+        "404":
+          description: Comment not found
     delete:
       tags:
       - book-controller
@@ -178,14 +316,21 @@ paths:
           type: integer
           format: int64
       responses:
-        "404":
-          description: Comment not found
         "400":
           description: Invalid id supplied
         "204":
           description: If the comment has been deleted successfully
+        "404":
+          description: Comment not found
 components:
   schemas:
+    UserDTO:
+      type: object
+      properties:
+        email:
+          type: string
+        nickname:
+          type: string
     Comment:
       required:
       - text
@@ -208,6 +353,27 @@ components:
           minimum: 0
           type: integer
           format: int32
+    BookPostDTO:
+      required:
+      - title
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        title:
+          maxLength: 200
+          minLength: 2
+          type: string
+        summary:
+          type: string
+        author:
+          type: string
+        publisher:
+          type: string
+        publicationYear:
+          type: integer
+          format: int32
     Book:
       required:
       - title
@@ -226,83 +392,43 @@ components:
           type: string
         publisher:
           type: string
-        published_year:
+        publicationYear:
           type: integer
           format: int32
         comments:
           type: array
           items:
-            $ref: '#/components/schemas/Comment'
-        commentsMap:
-          type: object
-          additionalProperties:
-            $ref: '#/components/schemas/Comment'
-    Book_BookDetail:
-      required:
-      - title
+            $ref: '#/components/schemas/CommentResponseDTO'
+    CommentResponseDTO:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
-        title:
-          maxLength: 200
-          minLength: 2
+        text:
           type: string
-        summary:
+        nick:
           type: string
-        author:
+        email:
           type: string
-        publisher:
-          type: string
-        published_year:
-          type: integer
-          format: int32
-        comments:
-          type: array
-          items:
-            $ref: '#/components/schemas/Comment_BookDetail'
-        commentsMap:
-          type: object
-          additionalProperties:
-            $ref: '#/components/schemas/Comment_BookDetail'
-    Comment_BookDetail:
-      required:
-      - text
-      - username
+    CommentDTO:
       type: object
       properties:
         id:
           type: integer
           format: int64
         username:
-          maxLength: 20
-          minLength: 2
           type: string
         text:
-          maxLength: 200
-          minLength: 3
           type: string
         rating:
-          maximum: 5
-          minimum: 0
           type: integer
           format: int32
-    Book_Basic:
-      required:
-      - title
+        book_id:
+          type: integer
+          format: int64
+    BookListResponseDTO:
       type: object
       properties:
         id:
           type: integer
           format: int64
         title:
-          maxLength: 200
-          minLength: 2
           type: string
-        commentsMap:
-          type: object
-          additionalProperties:
-            $ref: '#/components/schemas/Comment_Basic'
-    Comment_Basic:
-      type: object
