# src/main/java/es/torres/books/controller/BookController.java
@@ -2,8 +2,9 @@ package es.torres.books.controller;
 
 import static org.springframework.web.servlet.support.ServletUriComponentsBuilder.fromCurrentRequest;
 
-import com.fasterxml.jackson.annotation.JsonView;
 import es.torres.books.model.Book;
+import es.torres.books.model.BookListResponseDTO;
+import es.torres.books.model.BookPostDTO;
 import es.torres.books.model.Comment;
 import es.torres.books.service.BookService;
 import io.swagger.v3.oas.annotations.Operation;
@@ -24,14 +25,10 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/books")
+@RequestMapping("/api/v1/books")
 public class BookController {
 
     private BookService bookService;
-
-    public interface BookDetail extends Book.Basic, Book.Detail, Comment.Basic {
-
-    }
 
     public BookController(BookService bookService) {
         this.bookService = bookService;
@@ -41,10 +38,9 @@ public class BookController {
     @ApiResponses(value = {
         @ApiResponse(responseCode = "200", description = "Returns the list of books"),
         @ApiResponse(responseCode = "500", description = "If a runtime error occurs while processing the request", content = @Content)})
-    @JsonView(Book.Basic.class)
     @GetMapping("/")
-    public ResponseEntity<Collection<Book>> getBooks() {
-        return ResponseEntity.ok().body(bookService.findAll());
+    public ResponseEntity<Collection<BookListResponseDTO>> getBooks() {
+        return ResponseEntity.ok().body(bookService.findAllBooks());
     }
 
     @Operation(summary = "Get a book by its id")
@@ -52,7 +48,6 @@ public class BookController {
         @ApiResponse(responseCode = "200", description = "Found the book"),
         @ApiResponse(responseCode = "400", description = "Invalid id supplied", content = @Content),
         @ApiResponse(responseCode = "404", description = "Book not found", content = @Content)})
-    @JsonView(BookDetail.class)
     @GetMapping("/{id}")
     public ResponseEntity<Book> getBookById(@PathVariable long id) {
         return ResponseEntity.ok(bookService.findById(id));
@@ -77,10 +72,10 @@ public class BookController {
         @ApiResponse(responseCode = "400", description = "If one or more request parameters don't comply with the specification", content = @Content),
         @ApiResponse(responseCode = "500", description = "If a runtime error occurs while processing the request", content = @Content)})
     @PostMapping("/")
-    public ResponseEntity<Book> createBook(@Valid @RequestBody Book book) {
-        book = bookService.save(book);
-        URI location = fromCurrentRequest().path("/{id}").buildAndExpand(book.getId()).toUri();
-        return ResponseEntity.created(location).body(book);
+    public ResponseEntity<BookPostDTO> createBook(@Valid @RequestBody BookPostDTO book) {
+        BookPostDTO newBook = bookService.save(book);
+        URI location = fromCurrentRequest().path("/{id}").buildAndExpand(newBook.getId()).toUri();
+        return ResponseEntity.created(location).body(newBook);
     }
 
     @Operation(summary = "Creates a new comment")
@@ -91,9 +86,9 @@ public class BookController {
         @ApiResponse(responseCode = "500", description = "If a runtime error occurs while processing the request", content = @Content)})
     @PostMapping("/{id}/comments")
     public ResponseEntity<Comment> createComment(@PathVariable long id, @Valid @RequestBody Comment comment) {
-        comment = bookService.save(comment, id);
-        URI location = fromCurrentRequest().path("/{id}").buildAndExpand(comment.getId()).toUri();
-        return ResponseEntity.created(location).body(comment);
+        Comment newComment = bookService.save(comment, id);
+        URI location = fromCurrentRequest().path("/{id}").buildAndExpand(newComment.getId()).toUri();
+        return ResponseEntity.created(location).body(newComment);
     }
 
     @Operation(summary = "Get a comment by its id")
