# src/main/java/es/torres/books/persistence/entity/CommentEntity.java
@@ -1,0 +1,82 @@
+package es.torres.books.persistence.entity;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.FetchType;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.ManyToOne;
+import javax.persistence.Table;
+
+@Entity
+@Table(name = "comment")
+public class CommentEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable = false)
+    private String text;
+
+    @Column
+    private Short rating;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "book_id")
+    private BookEntity book;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "nickname")
+    private UserEntity user;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(final Long id) {
+        this.id = id;
+    }
+
+    public String getText() {
+        return text;
+    }
+
+    public void setText(final String text) {
+        this.text = text;
+    }
+
+    public Short getRating() {
+        return rating;
+    }
+
+    public void setRating(final Short rating) {
+        this.rating = rating;
+    }
+
+    public BookEntity getBook() {
+        return book;
+    }
+
+    public void setBook(final BookEntity book) {
+        this.book = book;
+    }
+
+    public UserEntity getUser() {
+        return user;
+    }
+
+    public void setUser(final UserEntity user) {
+        this.user = user;
+    }
+
+    public CommentEntity(String text, Short rating) {
+        this.text = text;
+        this.rating = rating;
+    }
+
+    public CommentEntity() {
+    }
+}
